add custom outline class

--- a/app/globals.css
+++ b/app/globals.css
@@ -73,4 +73,8 @@ body {
   .title {
     @apply font-serif text-3xl font-bold underline decoration-border/75 decoration-2 underline-offset-8;
   }
+
+  .custom-outline {
+    @apply ring-offset-background focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2;
+  }
 }
